# snitch

./: .gitignore  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  build.rs
.github/: testconfig.yaml
.github/workflows/: build_debian_package.yml  deploy.yml  deploy_aarch.yml  github-release.yml  release_cratesio.yml  rust.yml  testconfig.yaml
extra/: bootstrap.sh  snitch.service
multi_dispatcher/: Cargo.toml
multi_dispatcher/src/: lib.rs  message.rs
multi_dispatcher/src/dispatcher/: backend.rs  email.rs  mod.rs  slack.rs  telegram.rs
src/: authentication_logs.rs  bin.rs  cli.rs  config.rs  dispatcher.rs  entropy.rs  hashing.rs  lib.rs  main.rs  persist.rs  style.rs  test_utils.rs
src/config/: default.rs  macos.rs  mod.rs  windows.rs
src/notifiers/: backend.rs  email.rs  mod.rs  slack.rs  telegram.rs
