[package]
name = "snitch"
description = "Intrusion detection and file integrity verification"
version = "0.1.9"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Marius Kriegerowski <marius.kriegerowski@gmail.com>"]

[lib]
name = "snitch"
path = "src/lib.rs"

[[bin]]
name = "snitch"
path = "src/bin.rs"

[dependencies]
multi_dispatcher = {path="./multi_dispatcher"}
clap = {version= "4.1.13", features=["derive"]}
data-encoding = "2.3"
env_logger = "0.11.8"
indicatif = "0.17.11"
lazy_static = "1"
log = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ring = "0.17.0-alpha.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
sled = "0.34"
tokio = { version = "1.17", features = ["full"] }
walkdir = "2.3"
notify = "4.0.17"
eyre = "0.6.8"
url = { version = "2.3.1", features = ["serde"] }
thiserror = "1.0.40"

[features]
experimental = []
