[package]
name = "snitch"
description = "Intrusion detection and file integrity verification"
version = "0.1.9"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Marius Kriegerowski <marius.kriegerowski@gmail.com>"]

[lib]
name = "snitch"
path = "src/lib.rs"

[[bin]]
name = "snitch"
path = "src/bin.rs"

[dependencies]
chatterbox = "1.2.2"
clap = {version= "4.1.13", features=["derive"]}
data-encoding = "2.3"
env_logger = "0.11.8"
indicatif = "0.17.11"
lazy_static = "1"
log = "0.4"
regex = "1.5"
ring = "0.17.0-alpha.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.19"
sled = "0.34"
tokio = { version = "1.17", features = ["full"] }
walkdir = "2.3"
notify = { version = "8.0" , features = ["serde"]}
eyre = "0.6.8"
thiserror = "1.0.40"
reqwest = { version = "0.12", features = ["json"] }
chrono = {version =  "0.4.41", features = ["serde"] }
hostname = "^0.4"

[dev-dependencies]
needs_env_var = "2.0.1"

[features]
experimental = []
