[package]
name = "multi_dispatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9"
tokio = {version = "1.21.2", features=["full"]}
futures = "0.3.25"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lettre = "0.10.0-beta.2"
slack-hook = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0"
