[package]
name = "multi_dispatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9"
tokio = {version = "1.21.2", features=["full"]}
futures = "0.3.25"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lettre = "0.10.0-beta.2"
slack-hook = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0"
url = "2.3.1"
lazy_static = "1.4.0"
thiserror = "1.0.40"
validator = { verison="0.16.0", features = ["derive"] }

[dev-dependencies]
needs_env_var = "1.0.0"
